--- a/projects/ngx-balance-text/package.json
+++ b/projects/ngx-balance-text/package.json
@@ -4,5 +4,8 @@
   "peerDependencies": {
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0"
+  },
+  "dependencies": {
+    "balance-text": "^3.2.1"
   }
 }
